# Dozie-Shutdown-Timer

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: release.yaml
scripts/: bump-version.cjs
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
