[package]
name = "Dozie-Shutdown-Timer"
version = "1.1.2"
description = "Dozie Shutdown Timer is a simple application that allows you to schedule your computer to shut down after a specified amount of time. It provides an easy-to-use interface for setting timers and managing shutdown schedules."
authors = ["nothowstorygoes"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sleep_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.3", features =  ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
winreg = "0.11"
tauri-plugin-decorum = "1.1.1"
msix = "0.4.0"

[package.metadata.msix]
# Il nome visualizzato nello Store
display_name = "Dozie Shutdown Timer" 
# Nome univoco (deve coincidere con quello del Partner Center)
identity_name = "nothowstorygoes.DozieShutdownTimer"
publisher = "CN=671433DE-39F6-4732-8DE0-426A51A7690F"
publisher_display_name = "nothowstorygoes"
logo = "icons/StoreLogo.png"
square44x44_logo = "icons/Square44x44Logo.png"
square150x150_logo = "icons/Square150x150Logo.png"
# Capability necessaria (quella di cui parlavamo prima)
capabilities = ["runFullTrust"]
install_location = "app"
