[package]
name = "Dozie-Shutdown-Timer"
version = "1.1.3"
description = "Dozie Shutdown Timer is a simple application that allows you to schedule your computer to shut down after a specified amount of time. It provides an easy-to-use interface for setting timers and managing shutdown schedules."
authors = ["nothowstorygoes"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sleep_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.3", features =  ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
winreg = "0.11"
tauri-plugin-decorum = "1.1.1"
windows = { version = "0.58", features = [
    "Win32_System_Power",
    "Win32_Foundation",
] }
